test/failing/nostruct3.trunnel

struct x {
  u8 a;
  struct y yy[a];
}
